# pdf-spltr

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
pdf_splitter/: __init__.py  __main__.py  cli.py  main.py  splitter.py
