[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-splitter"
version = "1.0.0"
description = "A production-ready command-line tool for splitting PDF files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PDF Splitter Team"}
]
keywords = ["pdf", "split", "merge", "cli", "command-line"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Topic :: Office/Business",
]
dependencies = [
    "pypdf>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
pdf-splitter = "pdf_splitter.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/pdf-splitter"
Documentation = "https://github.com/yourusername/pdf-splitter/blob/main/README.md"
Repository = "https://github.com/yourusername/pdf-splitter"

[tool.setuptools]
packages = ["pdf_splitter"]

[tool.setuptools.package-data]
pdf_splitter = ["py.typed"]
